--- a/index.html
+++ b/index.html
@@ -81,11 +81,7 @@
     <!-- home -->
     <section id="home">
         <!-- bg video -->
-        <video class="home-bg-video" poster="img/home-bg/quarex.jpg" autoplay loop muted>
-            <!-- <source src="video/solo.mp4" type="video/mp4">
-            <source src="video/solo.ogv" type="video/ogg">
-            <source src="video/solo.webm" type="video/webm"> -->
-        </video>
+        <div class="home-bg-video"></div>
         <!-- overlay -->
         <div class="home-overlay"></div>
         <!-- home content -->
